# RevEngine

./: .gitignore  CADConverter.cpp  CADConverter.h  CMakeLists.txt  Camera.cpp  Camera.h  HoughTransformer.cpp  HoughTransformer.h  ModelManager.cpp  ModelManager.h  README.md  Scene.cpp  Scene.h  Settings.h  Util.h  Viewport.cpp  Viewport.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
data/: BoundingBox.h  KDTree.cpp  KDTree.h  Mesh.cpp  Model.cpp  Model.h  ModelStatus.h  PointCloud.cpp  PointCloud.h
dbscan/: dbscan.cpp  dbscan.hpp
exceptions/: FileReadException.cpp  FileReadException.h
materials/: Material.cpp  Material.h  NormalsMaterial.cpp  NormalsMaterial.h  Phong.cpp  Phong.h  PointCloudMaterial.cpp  PointCloudMaterial.h  ShapeMaterial.cpp  ShapeMaterial.h  Wireframe.cpp  Wireframe.h  WorldMaterial.cpp  WorldMaterial.h
primitives/: Circle.cpp  Circle.h  Cylinder.cpp  Cylinder.h  NormalPlane.cpp  NormalPlane.h  Plane.cpp  Plane.h  PrimitiveShape.cpp  PrimitiveShape.h  PrimitiveType.h  RenderShape.h
renderers/: ModelRenderer.cpp  ModelRenderer.h  Renderer.cpp  Renderer.h
resources/shaders/: normals.frag  normals.geom  normals.vert  pointcloud.frag  pointcloud.geom  pointcloud.vert  shape.frag  shape.geom  shape.vert  world.frag  world.geom  world.vert
